# llmwerewolf-rs

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README.zh-CN.md  README.zh-TW.md  TODO.md
.devcontainer/: Dockerfile
.github/workflows/: build_release.yml  code_scan.yml
cli/nodejs/: package.json
cli/python/: pyproject.toml
cli/python/src/llmwerewolf/: __init__.py
configs/: demo.yaml  players.yaml
docker/: Dockerfile
src/: main.rs
src/llm_werewolf/: __init__.py  cli.py  tui.py
src/llm_werewolf/ai/: __init__.py  agents.py  message.py
src/llm_werewolf/config/: __init__.py  game_config.py  role_presets.py
src/llm_werewolf/core/: __init__.py  actions.py  events.py  game_engine.py  game_state.py  player.py  victory.py
src/llm_werewolf/core/roles/: __init__.py  base.py  neutral.py  villager.py  werewolf.py
src/llm_werewolf/ui/: __init__.py  styles.py  tui_app.py
src/llm_werewolf/ui/components/: __init__.py  chat_panel.py  debug_panel.py  game_panel.py  player_panel.py
tests/: basic.rs
