[package]
name = "llmwerewolf"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["Wei Lee <mai@mai0313.com>"]
description = "LLM Werewolf — a Rust toolkit for building automated social deduction games."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Mai0313/LLMWereWolf"
repository = "https://github.com/Mai0313/LLMWereWolf"

[[bin]]
name = "llmwerewolf"
path = "src/main.rs"

[dependencies]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
